--- a/usfsp.css
+++ b/usfsp.css
@@ -192,7 +192,7 @@ max-height: ;
 
 .header_color .header_bg, .header_color .main_menu ul, .header_color .main_menu .menu ul li a, .header_color .pointer_arrow_wrap .pointer_arrow, .header_color .avia_mega_div {
 background-color: ;
-color: ;
+color: #000C00;
 border: none;
 }
 
