--- a/usfsp.css
+++ b/usfsp.css
@@ -42,3 +42,6 @@ body {
   font-family:'Open Sans', 'HelveticaNeue', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   
 }
+caption {
+    font-weight: bold;
+}
