--- a/usfsp.css
+++ b/usfsp.css
@@ -42,6 +42,6 @@ body {
   font-family:'Open Sans', 'HelveticaNeue', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   
 }
-caption {
+figcaption {
     font-weight: bold;
 }
