--- a/usfsp.css
+++ b/usfsp.css
@@ -42,6 +42,13 @@ body {
   font-family:'Open Sans', 'HelveticaNeue', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   
 }
+
+.footer_one {
+   border-bottom-style:solid;
+   border-width:3px;
+   border-bottom-color:#ffffff;
+   color:#ffffff;" 
+}
 figcaption {
     font-weight: bold;
     text-transform: uppercase;
