--- a/usfsp.css
+++ b/usfsp.css
@@ -44,6 +44,10 @@ body {
 }
 
 .footer_one {
+   color:#ffffff;
+}
+
+.footer_one_underline {
    border-bottom-style:solid;
    border-width:3px;
    border-bottom-color:#ffffff;
