--- a/usfsp.css
+++ b/usfsp.css
@@ -51,6 +51,7 @@ body {
    border-bottom-style:solid;
    border-width:3px;
    border-bottom-color:#ffffff;
+   margin-bottom:5px;
    color:#ffffff;
 }
 
