--- a/usfsp.css
+++ b/usfsp.css
@@ -51,8 +51,8 @@ body {
    border-bottom-style:solid;
    border-width:3px;
    border-bottom-color:#ffffff;
-   margin-bottom:5px;
-   color:#ffffff;
+   padding-bottom:10px;
+   color:white;
 }
 
 .footer_two {
