--- a/usfsp.css
+++ b/usfsp.css
@@ -43,8 +43,23 @@ body {
   
 }
 
-.footer_one {
-   color:#ffffff;
+.footer_one ul {
+    margin: 0.75em 0;
+    padding: 0 1em;
+    list-style: none;
+}
+
+.footer_one li:before{
+    content: "";
+    border-color: transparent #111;
+    border-style: solid;
+    border-width: 0.35em 0 0.35em 0.45em;
+    display: block;
+    height: 0;
+    width: 0;
+    left: -1em;
+    top: 0.9em;
+    position: relative;
 }
 
 .footer_one  li:hover {
