--- a/usfsp.css
+++ b/usfsp.css
@@ -51,7 +51,7 @@ body {
 
 .footer_one li:before{
     content: "";
-    border-color: transparent #111;
+    border-color: transparent #b0b1bd;
     border-style: solid;
     border-width: 0.35em 0 0.35em 0.45em;
     display: block;
