--- a/usfsp.css
+++ b/usfsp.css
@@ -109,14 +109,14 @@ figcaption {
 }
  
  #colorfulnav li a{
-     display:inline-block;
-     float:left;
+     display:inline;
      color:#ffffff;
      font-family: "Open Sans","HelveticaNeue","Helvetica Neue";
      font-size:12px;
      font-weight:300;
      line-height:24px;
      list-style:none;
-     
+     border-top-left-radius:4px;
+     border-top-right-radius:4px;
      
  }
