--- a/usfsp.css
+++ b/usfsp.css
@@ -109,7 +109,7 @@ figcaption {
 }
  
  #colorfulnav li a{
-     display:inline;
+     display:inline-block;
      color:#ffffff;
      font-family: "Open Sans","HelveticaNeue","Helvetica Neue";
      font-size:12px;
@@ -118,6 +118,8 @@ figcaption {
      list-style:none;
      border-top-left-radius:4px;
      border-top-right-radius:4px;
+     list-style:none;
+     text-decoration:none;
      
  }
   
