--- a/usfsp.css
+++ b/usfsp.css
@@ -107,9 +107,11 @@ figcaption {
     border-width:3px;
     border-bottom-color:#ffffff;
 }
- 
- #colorfulnav li a{
-     display:inline-block;
+ #colorfulnav ul, li {
+     display:inline;
+     list-style:none;
+ }
+ #colorfulnav a {
      color:#ffffff;
      font-family: "Open Sans","HelveticaNeue","Helvetica Neue";
      font-size:12px;
@@ -118,8 +120,9 @@ figcaption {
      list-style:none;
      border-top-left-radius:4px;
      border-top-right-radius:4px;
-     list-style:none;
      text-decoration:none;
+     border-bottom-left-radius:4px;
+     border-bottom-right-radius:4px;
      
  }
   
