--- a/usfsp.css
+++ b/usfsp.css
@@ -123,6 +123,7 @@ figcaption {
      text-decoration:none;
      border-bottom-left-radius:4px;
      border-bottom-right-radius:4px;
+     padding:20px;
      
  }
   
