--- a/usfsp.css
+++ b/usfsp.css
@@ -113,9 +113,9 @@ figcaption {
  }
  #colorfulnav a {
      color:#ffffff;
-     font-family: "Open Sans","HelveticaNeue","Helvetica Neue";
+     font-family: "Open Sans";
      font-size:12px;
-     font-weight:300;
+     font-weight:400;
      line-height:24px;
      list-style:none;
      border-top-left-radius:4px;
@@ -123,7 +123,6 @@ figcaption {
      text-decoration:none;
      border-bottom-left-radius:4px;
      border-bottom-right-radius:4px;
-     padding:20px;
-     
+     padding:10px;
  }
   
