--- a/usfsp.css
+++ b/usfsp.css
@@ -69,11 +69,11 @@ body {
 
 
 .footer_one_underline {
-   border-bottom-style:solid;
    border-width:3px;
    border-bottom-color:#ffffff;
    padding-bottom:10px;
    color:white;
+    border-bottom: 1px solid #69b4a4;
 }
 
 .footer_two {
@@ -126,4 +126,6 @@ figcaption {
      padding:10px;
  }
   
- 
+ .bottomunderlinefooter {
+     font-family:http://fonts.gstatic.com/s/opensans/v13/cJZKeOuBrn4kERxqtaUH3T8E0i7KZn-EPnyo3HZu7kw.woff;
+ }
