--- a/usfsp.css
+++ b/usfsp.css
@@ -47,8 +47,11 @@ body {
     margin: 0.75em 0;
     padding: 0 1em;
     list-style: none;
+    border-bottom: 1px solid #69b4a4;
 }
-
+.footer_one li {
+  border-bottom: 1px solid #69b4a4;
+}
 .footer_one li:before{
     content: "";
     border-color: transparent #b0b1bd;
@@ -125,7 +128,4 @@ figcaption {
      border-bottom-right-radius:4px;
      padding:10px;
  }
-  
- .bottomunderlinefooter {
-     font-family:http://fonts.gstatic.com/s/opensans/v13/cJZKeOuBrn4kERxqtaUH3T8E0i7KZn-EPnyo3HZu7kw.woff;
- }
+
