--- a/usfsp.css
+++ b/usfsp.css
@@ -40,6 +40,7 @@ color:#ffffff;
 h1, h2, h3, h4, h5, h6, #top .title_container .main-title, tr.pricing-row td, #top .portfolio-title, .callout .content-area, .avia-big-box .avia-innerbox, .av-special-font, .av-current-sort-title{font-family:'PT Sans', 'HelveticaNeue', 'Helvetica Neue', Helvetica, Arial, sans-serif;}
 body {
   font-family:'Open Sans', 'HelveticaNeue', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  color#cccccc;
   
 }
 
